functioneaza pupal-as pe Cata

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link href="css/register.css" rel="stylesheet" type="text/css">
-    <script rel="text/js" href="js/register.js"></script>
+    <script rel="text/javascript" src="js/register.js"></script>
 </head>
 <body>
     <div class="form">
         <form class="register-form" method="post">
             <h2><i>Register</i></h2>
-            <input type="text" placeholder="Username *" required/>
-            <input type="password" placeholder="Password *" required/>
-            <input type="text" placeholder="E-mail *" required/>
-            <a class="btn" href="#">
+            <input type="text" id="reg_usernameBox" placeholder="Username *" required/>
+            <input type="password" id="reg_passwordBox" placeholder="Password *" required/>
+            <input type="text" id="reg_emailBox" placeholder="E-mail *" required/>
+            <button type="button" class="btn create_btn" onclick="registerBtn()">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
                 Create
-            </a>
-            <p class="message">Already registered? <a href="login.html">Sing In</a></p>
+            </button>
+            <p class="message">Already registered? <button type="button" class="sec_btn" onclick="goToLogin()">Sing In</button></p>
+            <p class="message">Not ready to join yet? <button type="button" class="sec_btn" onclick="">Go back</button></p>
         </form>
     </div>
 </body>
