--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,28 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
     <link rel="stylesheet" type="text/css" href="css/login.css">
-    <script type="text/js" href="js/login.js"></script>
 </head>
 <body>
     <div class="form">
-        <form class="login-form" method="post">
+        <form class="login-form">
             <h2><i>Log In</i></h2>
-            <input type="text" placeholder="Username" required/>
-            <input type="password" id="passwordBox" placeholder="Password" required/>
-            <a class="btn" href="#">
+            <input type="text" id="log_usernameBox" placeholder="Username" required/>
+            <input type="password" id="log_passwordBox" placeholder="Password" required/>
+            <button type="button" class="btn login_btn" id="goLoginBtn" onclick="">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
                 Sign In
-            </a>
-            <p class="message">Not registered? <a href="register.html">Create an account</a></p>
+            </button>
+            <p class="message">Not registered? <button type="button" class="sec_btn" onclick="">Create an account</button></p>
+            <p class="message">Continue without any account? <button type="button" class="sec_btn" onclick="">Go back</button></p>
         </form> 
     </div>
-    
-    <script src="/js/login.js"></script>
-    <!--
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
-    -->
 </body>
+
+<script type="text/javascript" src="js/login.js"></script>
+
 </html>
