--- a/frontend/login.html
+++ b/frontend/login.html
@@ -12,7 +12,7 @@
             <h2><i>Log In</i></h2>
             <input type="text" id="log_usernameBox" placeholder="Username" required/>
             <input type="password" id="log_passwordBox" placeholder="Password" required/>
-            <button type="button" class="btn login_btn" id="goLoginBtn" onclick="">
+            <button type="button" class="btn login_btn" id="loginBtn">
                 <span></span>
                 <span></span>
                 <span></span>
