--- a/frontend/login.html
+++ b/frontend/login.html
@@ -19,8 +19,8 @@
                 <span></span>
                 Sign In
             </button>
-            <p class="message">Not registered? <button type="button" class="sec_btn" onclick="">Create an account</button></p>
-            <p class="message">Continue without any account? <button type="button" class="sec_btn" onclick="">Go back</button></p>
+            <p class="message">Not registered? <button type="button" class="sec_btn">Create an account</button></p>
+            <p class="message">Continue without any account? <button type="button" class="sec_btn">Go back</button></p>
         </form> 
     </div>
 </body>
