finally register si login functioneste bine

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -21,6 +21,7 @@
             </button>
             <p class="message">Not registered? <button type="button" class="sec_btn">Create an account</button></p>
             <p class="message">Continue without any account? <button type="button" class="sec_btn">Go back</button></p>
+            <div id="errorMessage" class="error-message"></div>
         </form> 
     </div>
 </body>
