--- a/frontend/register.html
+++ b/frontend/register.html
@@ -22,6 +22,7 @@
             </button>
             <p class="message">Already registered? <button type="button" class="sec_btn" onclick="">Sing In</button></p>
             <p class="message">Not ready to join yet? <button type="button" class="sec_btn" onclick="">Go back</button></p>
+            <div id="errorMessage" class="error-message"></div>
         </form>
     </div>
 </body>
