--- a/frontend/main_page.html
+++ b/frontend/main_page.html
@@ -10,11 +10,19 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="login.html">Log In</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">Contact</a></li>
+            <li>
+                <button id="loginProfile"></button>
+                <ul id="expandedLoginProfile" class="expanded_login_profile">
+                    <li><button id="logOut">Log out</button></li>
+                    <li><button id="deleteAccount">Delete account</button></li>
+                </ul>
+            </li>
+            <li><button id="aboutUs">About us</button></li>
+            <li><button id="contact">Contact</button></li>
         </ul>
     </nav>
 
 </body>
+<script rel="text/javascript" src="js/main_page.js"></script>
+
 </html>
