--- a/frontend/register.html
+++ b/frontend/register.html
@@ -20,8 +20,8 @@
                 <span></span>
                 Create
             </button>
-            <p class="message">Already registered? <button type="button" class="sec_btn" onclick="">Sing In</button></p>
-            <p class="message">Not ready to join yet? <button type="button" class="sec_btn" onclick="">Go back</button></p>
+            <p class="message">Already registered? <button type="button" id="gotoLogin" class="sec_btn" onclick="">Sing In</button></p>
+            <p class="message">Not ready to join yet? <button type="button" id="gotoMain" class="sec_btn" onclick="">Go back</button></p>
             <div id="errorMessage" class="error-message"></div>
         </form>
     </div>
