--- a/frontend/register.html
+++ b/frontend/register.html
@@ -13,6 +13,7 @@
             <input type="text" id="reg_usernameBox" placeholder="Username *" required/>
             <input type="password" id="reg_passwordBox" placeholder="Password *" required/>
             <input type="text" id="reg_emailBox" placeholder="E-mail *" required/>
+            <div id="errorMessage" class="error-message"></div>
             <button type="button" class="btn create_btn" id="registerBtn">
                 <span></span>
                 <span></span>
@@ -21,8 +22,7 @@
                 Create
             </button>
             <p class="message">Already registered? <button type="button" id="gotoLogin" class="sec_btn" onclick="">Sing In</button></p>
-            <p class="message">Not ready to join yet? <button type="button" id="gotoMain" class="sec_btn" onclick="">Go back</button></p>
-            <div id="errorMessage" class="error-message"></div>
+            <p><button type="button" id="gotoMain" class="sec_btn" onclick="">Home page</button></p>
         </form>
     </div>
 </body>
