secretKey database + register care merge 100%

--- a/frontend/main_page.html
+++ b/frontend/main_page.html
@@ -14,6 +14,7 @@
                 <button id="loginProfile"></button>
                 <ul id="expandedLoginProfile" class="expanded_login_profile">
                     <li><button id="logOut">Log out</button></li>
+                    <li><button id="changePassword">Change Password</button></li>
                     <li><button id="deleteAccount">Delete account</button></li>
                 </ul>
             </li>
