Forgot password form, token registration and login repaired

--- a/frontend/changePassword.html
+++ b/frontend/changePassword.html
@@ -8,16 +8,18 @@
 </head>
 <body>
     <div id="changePasswordFuncions" class="changePasswordForm">
+        <h2><i>Change Password</i></h2>
         <input type="text" id="oldPassword" placeholder="Old Password">
         <input type="text" id="newPassword" placeholder="New Password">
         <input type="text" id="repeatNewPassword" placeholder="Repeat New Password">
         <div id="errorMessage" class="error-message"></div>
         <br>
-        <button type="button" id="changePasswordBtn">Change Password</button>
+        <button type="button" id="changePasswordBtn" class="btn">Change Password</button>
         <br>
-        <button type="button" id="goToMain">Go Back</button>
+        <button type="button" id="goToMain" class="sec_btn">Go Back</button>
     </div>
 </body>
+<script type="text/javascript" src="./js/cookies.js"></script>
 <script type="text/javascript" src="./js/changePassword.js"></script>
     
 </html>
