--- a/frontend/login.html
+++ b/frontend/login.html
@@ -39,5 +39,6 @@
 
 </body>
 
+<script type="text/javascript" src="./js/cookies.js"></script>
 <script type="text/javascript" src="js/login.js"></script>
 </html>
