--- a/frontend/main_page.html
+++ b/frontend/main_page.html
@@ -24,6 +24,8 @@
     </nav>
 
 </body>
+
+<script type="text/javascript" src="./js/cookies.js"></script>
 <script rel="text/javascript" src="js/main_page.js"></script>
 
 </html>
