--- a/frontend/register.html
+++ b/frontend/register.html
@@ -26,7 +26,7 @@
         </form>
     </div>
 </body>
-
+<script type="text/javascript" src="./js/cookies.js"></script>
 <script rel="text/javascript" src="js/register.js"></script>
 
 </html>
