Working on delete account page

--- a/frontend/changePassword.html
+++ b/frontend/changePassword.html
@@ -9,9 +9,9 @@
 <body>
     <div id="changePasswordFuncions" class="changePasswordForm">
         <h2><i>Change Password</i></h2>
-        <input type="text" id="oldPassword" placeholder="Old Password">
-        <input type="text" id="newPassword" placeholder="New Password">
-        <input type="text" id="repeatNewPassword" placeholder="Repeat New Password">
+        <input type="password" id="oldPassword" placeholder="Old Password">
+        <input type="password" id="newPassword" placeholder="New Password">
+        <input type="password" id="repeatNewPassword" placeholder="Repeat New Password">
         <div id="errorMessage" class="error-message"></div>
         <br>
         <button type="button" id="changePasswordBtn" class="btn">Change Password</button>
