Finally a good navbar

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -37,8 +37,7 @@
         <p><button type="button" id="goToLogin" class="sec_btn">Go to LogIn</button></p>
     </div>
 
+    <script type="text/javascript" src="./js/cookies.js"></script>
+    <script type="text/javascript" src="./js/login.js"></script>
 </body>
-
-<script type="text/javascript" src="./js/cookies.js"></script>
-<script type="text/javascript" src="js/login.js"></script>
 </html>
