--- a/frontend/deleteAccount.html
+++ b/frontend/deleteAccount.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form">
         <form method="post">
-            <input type="password" id="passwordField" class="passwordField" \required>
+            <input type="password" id="passwordField" class="passwordField" placeholder="Password" \required>
             <br>
             <button type="button" id="deleteAccountBtn" class="btn deleteBtn">Delete Account</button>
             <br>
@@ -18,7 +18,8 @@
 
         <div id="errorMessage" class="error-message"></div>
     </div>
+
+    <script type="text/javascript" src="./js/cookies.js"></script>
+    <script type="text/javascript" src="./js/deleteAccount.js"></script>
 </body>
-<script type="text/javascript" src="./js/cookies.js"></script>
-<script rel="text/javascript" src="js/deleteAccount.js"></script>
 </html>
