--- a/frontend/register.html
+++ b/frontend/register.html
@@ -25,8 +25,8 @@
             <p><button type="button" id="gotoMain" class="sec_btn" onclick="">Home page</button></p>
         </form>
     </div>
-</body>
-<script type="text/javascript" src="./js/cookies.js"></script>
-<script rel="text/javascript" src="js/register.js"></script>
 
+    <script type="text/javascript" src="./js/cookies.js"></script>
+    <script type="text/javascript" src="./js/register.js"></script>
+</body>
 </html>
