working on the mainpage

--- a/frontend/main_page.html
+++ b/frontend/main_page.html
@@ -28,6 +28,10 @@
         <button id="aboutUs">About Us</button>
     </div>
 
+    <div class="pictureContainer" id="pictureContainerBox">
+
+    </div>
+    
     <script type="text/javascript" src="./js/cookies.js"></script>
     <script type="text/javascript" src="./js/main_page.js"></script>
 </body>
