working on appointments

--- a/frontend/main_page.html
+++ b/frontend/main_page.html
@@ -16,7 +16,9 @@
 
             <!-- The content inside the Dropdown -->
             <div class="dropdownContent">
-                <button id="goToCart">Cart</button>
+                <button id="makeAnAppointment">Make an appointment</button>
+                <button id="goToAppointments">Past Appointments</button>
+                <br>
                 <button id="logOut">Log Out</button>
                 <button id="changePassword">Change Password</button>
                 <button id="deleteAccount">Delete Account</button>
