--- a/frontend/register.html
+++ b/frontend/register.html
@@ -13,6 +13,7 @@
             <input type="text" id="reg_usernameBox" placeholder="Username *" required/>
             <input type="password" id="reg_passwordBox" placeholder="Password *" required/>
             <input type="text" id="reg_emailBox" placeholder="E-mail *" required/>
+            <input type="text" id="reg_phoneBox" placeholder="Phone Number *" required/>
             <div id="errorMessage" class="error-message"></div>
             <button type="button" class="btn create_btn" id="registerBtn">
                 <span></span>
