fixed the navbar colors, added a HOME button, added an error message on failed appointments

--- a/frontend/appointments.html
+++ b/frontend/appointments.html
@@ -17,9 +17,13 @@
             <select id="serviceBox" required>
                 <option value="" disabled selected>Select the problem</option>
             </select>
+            
+            <div id="errorBox" class="errorBox"></div>
         </form>
 
         <button type="button" id="getAnAppointment">Get an Appointment</button>
+        <button type="button" id="homeBtn">Go Back</button>
+
     </div>
 
     <script type="text/javascript" src="./js/cookies.js"></script>
