--- a/frontend/main_page.html
+++ b/frontend/main_page.html
@@ -10,6 +10,7 @@
 
      <!-- The Navbar -->
     <div class="navbar">
+        <button id="homeBtn">HOME</button>
         <!-- The Dropdown -->
         <div class="dropdown">
             <!-- the profile button which expands -->
@@ -63,7 +64,7 @@
         <div class="section-content">
             <h2>State-of-the-Art Facility</h2>
             <p>Our clinic is equipped with the latest technology to ensure you receive top-notch dental care.</p>
-            <button id="learnMore3">Learn More</button>
+            <button id="lowerAboutUs">Learn More</button>
         </div>
     </div>
 
