--- a/frontend/services.html
+++ b/frontend/services.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="navbar">
+        <button id="homeBtn">HOME</button>
         <!-- The Dropdown -->
         <div class="dropdown">
             <!-- the profile button which expands -->
