--- a/frontend/doctors.html
+++ b/frontend/doctors.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="navbar">
+        <button id="homeBtn">HOME</button>
+        
         <!-- The Dropdown -->
         <div class="dropdown">
             <!-- the profile button which expands -->
