appointments page done

--- a/frontend/pastAppointments.html
+++ b/frontend/pastAppointments.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Past Appointments</title>
     <link rel="stylesheet" type="text/css" href="css/pastAppointments.css">
+    <title>Past Appointments</title>
 </head>
 <body>
-    
+    <div id="pastAppointmentsContainer"></div>
+
     <script type="text/javascript" src="./js/cookies.js"></script>
     <script type="text/javascript" src="./js/pastAppointments.js"></script>
 </body>
