--- a/frontend/pastAppointments.html
+++ b/frontend/pastAppointments.html
@@ -7,6 +7,29 @@
     <title>Past Appointments</title>
 </head>
 <body>
+    <div class="navbar">
+        <button id="homeBtn">HOME</button>
+        <!-- The Dropdown -->
+        <div class="dropdown">
+            <!-- the profile button which expands -->
+            <button id="loginProfile" class="dropdownBtn"></button> 
+
+            <!-- The content inside the Dropdown -->
+            <div class="dropdownContent">
+                <button id="makeAnAppointment">Make an appointment</button>
+                <button id="goToAppointments">Past Appointments</button>
+                <br>
+                <button id="logOut">Log Out</button>
+                <button id="changePassword">Change Password</button>
+                <button id="deleteAccount">Delete Account</button>
+            </div>
+        </div>
+
+        <!-- Outside Dropdown -->
+        <button id="contact">Contact</button>
+        <button id="aboutUs">About Us</button>
+    </div>
+    
     <div id="pastAppointmentsContainer"></div>
 
     <script type="text/javascript" src="./js/cookies.js"></script>
